# clocktopus

./: .env.example  .gitignore  .npmignore  CLAUDE.md  README.md  clockify.ts  eslint.config.js  index.ts  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.github/workflows/: build-desktop.yml
.husky/: post-checkout
config/: clockify.ts
dashboard/: server.ts  views.ts
dashboard/routes/: calendar.ts  clockify.ts  data.ts  desktop-version.test.ts  desktop-version.ts  google.ts  jira.ts  monitor.ts  server.ts  settings.test.ts  settings.ts  status.ts  timer.ts  update.test.ts  update.ts
desktop/: README.md  package.json  release.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
docs/: atlassian-oauth.md  atlassian-proxy-flow.md  dashboard.md  desktop-release.md
lib/: atlassian.ts  branch-parser.test.ts  branch-parser.ts  constants.ts  credentials.test.ts  credentials.ts  db.test.ts  db.ts  desktop-version.test.ts  desktop-version.ts  ensure-native-addons.ts  eod.test.ts  eod.ts  google.ts  hook-ignore.test.ts  hook-ignore.ts  hook-install.test.ts  hook-install.ts  hook-paths.test.ts  hook-paths.ts  hook-prompt.test.ts  hook-prompt.ts  hook-script.ts  http-client.ts  husky-install.test.ts  husky-install.ts  jira-summary.test.ts  jira-summary.ts  jira.test.ts  jira.ts  notifier.ts  project-matcher.test.ts  project-matcher.ts  settings.test.ts  settings.ts  simple-prompt.ts  start-timer.test.ts  start-timer.ts  update-cache.test.ts  update-cache.ts  (+2 more)
node-compile-cache/v25.3.0-arm64-392347a2-501/: 00ae252c  00f8b539  01094e7a  013a0fb8  015642e1  0178cb0d  0180a709  01b952c2  01eaa546  028655ec  02b06ee2  02d8bf56  02e11cd8  02e5ce75  02f20bf6  0334676a  03645fb8  0374628c  039763ba  03a0e76c  04efe52d  0508747f  052cb3c9  (+945 more)
proxy/: package.json  wrangler.toml
scripts/: desktop-version.ts  log-calendar-events.ts  postinstall.cjs
(+24 files in other folders)
